samples/_failures_safe/1761628392_b8faba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_360c91bf.c: In function ‘main’:
./samples/SAFE/__tmp_360c91bf.c:164:9: error: missing terminating " character
  164 |         "
      |         ^
./samples/SAFE/__tmp_360c91bf.c:164:9: error: expected expression at end of input
./samples/SAFE/__tmp_360c91bf.c:164:9: error: expected declaration or statement at end of input
